# devdox-ai-models

./:  pyproject.toml  .gitignore  README.md  __init__.py  pyproject.toml  repository_pattern_guide.md  sonar-project.properties
.github/workflows/: main.yml
models/: __init__.py  code_chunks.py  custom_indexes.py  git_label.py  queue.py  queue_job_claim_registry.py  repo.py
models_src/dto/: api_key.py  code_chunks.py  git_label.py  queue_job_claim_registry.py  repo.py  user.py  utils.py
models_src/exceptions/: base_exceptions.py  exception_constants.py  utils.py
models_src/models/: __init__.py  code_chunks.py  custom_indexes.py  db.py  git_label.py  queue_job_claim_registry.py  repo.py
models_src/repositories/: api_key.py  code_chunks.py  git_label.py  queue_job_claim_registry.py  repo.py  user.py
models_src/test_doubles/repositories/: api_key.py  bases.py  code_chunks.py  git_label.py  queue_job_claim_registry.py  repo.py  user.py
test/: conftest.py
test/unit/common_test_tools/: __init__.py  model_factories.py  qs_chain.py
test/unit/src/dto/: test_utils.py
test/unit/src/models/: test_db.py
test/unit/src/repositories/: conftest.py  test_api_key.py  test_code_chunks.py  test_git_label.py  test_queue_job_claim_registry.py  test_repo.py  test_user.py
test/unit/src/test_doubles/repositories/: test_api_key.py  test_bases.py  test_code_chunks.py  test_git_label.py  test_queue_job_claim_registry.py  test_repo.py  test_user.py
utils/: database.py
